--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="msg_sin_tareas">Sin tareas</string>
+    <string name="eliminar">eliminar</string>
+    <string name="descripcion">Descripción de la tarea</string>
+    <string name="agregar">Agregar</string>
+    <string name="tareas">Tareas</string>
+    <string name="inicio">Inicio</string>
+    <string name="completada">Completada</string>
 </resources>
