--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">AE3_-_ABP1_-_Grupo_1</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="msg_sin_tareas">Sin tareas</string>
     <string name="eliminar">eliminar</string>
     <string name="descripcion">Descripción de la tarea</string>
@@ -9,4 +7,6 @@
     <string name="tareas">Tareas</string>
     <string name="inicio">Inicio</string>
     <string name="completada">Completada</string>
+    <string name="nueva_tarea">Nueva tarea</string>
+    <string name="pendientes">Pendientes</string>
 </resources>
